Upgrade Dependencies, Add Picker

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 GOOGLE_API_KEY=your_default_google_api_key_here
 
+# ChromaDB Configuration
+CHROMA_HOST=localhost
+CHROMA_PORT=8000
+
 # Preconfigured Agent 1
 AGENT_1_NAME=Technical Recruiter
 AGENT_1_PROMPT=You are a Technical Recruiter at a Fortune 500 company. Analyze the CV for technical depth, project impact, and suitability for high-growth tech roles. Focus on quantifiable achievements and tech stack relevance.
