--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-langchain==0.3.14
-langchain-community==0.3.14
-langchain-google-genai==2.0.9
 google-generativeai==0.8.4
-langgraph==0.2.62
 streamlit==1.41.0
 pypdf==5.1.0
 chromadb==0.6.3
 duckduckgo-search==7.1.0
 python-dotenv==1.0.1
 tiktoken==0.8.0
+requests==2.32.3
+beautifulsoup4==4.12.3
+crewai>=0.80.0
