--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,13 +17,14 @@ repos:
     hooks:
     -   id: isort
 
--   repo: https://github.com/pycqa/flake8
-    rev: 7.0.0
+-   repo: local
     hooks:
-    -   id: flake8
-        additional_dependencies: [flake8-docstrings]
-        args: ["--max-line-length=120", "--ignore=E203,W503"]
-        stages: [manual]
+    -   id: flake8-warn
+        name: flake8-warnings
+        entry: scripts/flake8_non_blocking.sh
+        language: script
+        types: [python]
+        verbose: true
 
 -   repo: local
     hooks:
